gcc/testsuite/gdc.test/compilable/dtoh_special_enum.d
/+
REQUIRED_ARGS: -HC -c -o-
PERMUTE_ARGS:
TEST_OUTPUT:
---
// Automatically generated by Digital Mars D Compiler

#pragma once

#include <assert.h>
#include <math.h>
#include <stddef.h>
#include <stdint.h>

enum class __c_not_special;
extern "C" void fn_long(long __param_0_);

extern "C" void fn_ulong(unsigned long __param_0_);

extern "C" void fn_longlong(long long __param_0_);

extern "C" void fn_ulonglong(unsigned long long __param_0_);

extern "C" void fn_long_double(long double __param_0_);

extern "C" void fn_wchar_t(wchar_t __param_0_);

extern "C" void fn_complex_float(_Complex float __param_0_);

extern "C" void fn_complex_double(_Complex double __param_0_);

extern "C" void fn_complex_real(_Complex long double __param_0_);

extern "C" void fn_not_special(__c_not_special __param_0_);

---
+/

enum __c_long : int;
enum __c_ulong : int;
enum __c_longlong : int;
enum __c_ulonglong : int;
enum __c_long_double : int;
enum __c_wchar_t : int;
enum __c_complex_float : int;
enum __c_complex_double : int;
enum __c_complex_real : int;
enum __c_not_special : int;

extern(C) void fn_long(__c_long) {}
extern(C) void fn_ulong(__c_ulong) {}
extern(C) void fn_longlong(__c_longlong) {}
extern(C) void fn_ulonglong(__c_ulonglong) {}

extern(C) void fn_long_double(__c_long_double) {}

extern(C) void fn_wchar_t(__c_wchar_t) {}

extern(C) void fn_complex_float(__c_complex_float) {}
extern(C) void fn_complex_double(__c_complex_double) {}
extern(C) void fn_complex_real(__c_complex_real) {}

extern(C) void fn_not_special(__c_not_special) {}
